# webserver

./: .gitignore  Cargo.toml  README.md  actix-webserver.json  docker-compose.yaml
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--850072545424952747.wt  collection-0--9153885967590938969.wt  collection-0-2023586052213688673.wt  collection-2--850072545424952747.wt  collection-4--850072545424952747.wt  collection-7--850072545424952747.wt  index-1--850072545424952747.wt  index-1--9153885967590938969.wt  index-1-2023586052213688673.wt  index-3--850072545424952747.wt  index-5--850072545424952747.wt  index-6--850072545424952747.wt  index-8--850072545424952747.wt  index-9--850072545424952747.wt  sizeStorer.wt
db/diagnostic.data/: metrics.2022-03-21T17-34-03Z-00000  metrics.2022-03-21T17-34-16Z-00000  metrics.2022-03-21T17-48-27Z-00000  metrics.2022-03-23T00-06-20Z-00000  metrics.2022-03-23T00-06-58Z-00000  metrics.interim
src/: data.json  errors.rs  main.rs  models.rs  routes.rs
