[package]
name = "actix-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1" }
actix-rt = "2.7.0"
mongodb = "2.1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
bson = "2.1.0"
futures-util = "0.3"
dotenv = "0.15.0"