[package]
name = "actix-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
mongodb = "2.1"
serde = "1.0.136"
bson = "2.1.0"
futures-util = "0.3.21"
dotenv = "0.15.0"
serde_json = "1.0.79"
tokio = "1.17.0"
env_logger = "0.9.0"
derive_more = "0.99.17"